@@ -1,5 +1,12 @@
 2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03714] -cols 1 -dump -o fold_line=1
+	* file.c (addnewline): check i == 0, i == l->len
+	* fm.h (_INIT_BUFFER_WIDTH): added
+		(INIT_BUFFER_WIDTH): use _INIT_BUFFER_WIDTH
+
+2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03713] search with "$"
 	* search.c (forwardSearch): check l->next && l->next->bpos
 		(backwardSearch): check l->size, l->next && l->next->bpos
@@ -6958,4 +6965,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.727 2003/01/30 16:26:15 ukai Exp $
+$Id: ChangeLog,v 1.728 2003/01/30 16:29:11 ukai Exp $
